2010-09-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSString.m: implement lowercaseString and uppercaseString
	for improved performance.
	* Source/Additions/GSMime.m: optimise header searches

2010-09-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSTimer.m: ([-fire]) make firing more robust by retaining
	the target so it cannot be deallocated while we are performing a
	method on it.  Do nothing if timer is already invalidated.

2010-09-24  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCharacterSet.m: Build using the faster but more memory
	hungry implementation.  Add comments to say why we are doing so.

2010-09-20  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/ObjectiveC2/runtime.c (method_getImplementation,
	method_getName): Fix unchecked pointer dereferences, which could
	cause crashes when attempting to invoke a selector which is not
	implemented by the target.

2010-09-19  Quentin Mathe <quentin.mathe@gmail.com>

	* Headers/Additions/GNUstepBase/preface.h.in:
	Added standard C headers included by CoreFoundation.h. 

2010-09-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSBundle.m (+bundleForLibrary:version:): Use proper
	suffix for dynamic libraries on Darwin (.dylib instead of .so).

	* Source/NSTask.m (-launch): Use fork instead of vfork on Darwin,
	since setsid will fail while the child process is in the vfork.

2010-09-17  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSObject.m (-methodSignatureForSelector:): Fix bug were
	this method would return an incorrect result or crash when asking
	a class object for the signature of one of its class methods.

2010-09-15  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/GSSocketStream.m:
	* Source/NSPortCoder.m:
	* Source/NSSocketPort.m:
	* Source/NSAttributedString.m:
	* Source/NSKeyValueMutableSet.m:
	* Source/NSKeyedUnarchiver.m:
	* Source/NSUnarchiver.m:
	* Source/GSAttributedString.m:
	* Source/NSKeyValueMutableArray.m: